<?xml version="1.0" encoding="utf-8"?>
<resources>

	<!--  Global -->	
    <string name="app_name">Feed Reader</string>
	<string name="updir_label">View latest feeds</string>
    <string name="confirm">OK</string>
    <string name="deny">No</string>
    
	<string name="no_publishers">(Touch Menu → Add publisher) to start adding some feed publishers</string>
	
    <!--  image content descriptions -->
    <string name="contentDesc_folder">A folder signifying a file directory</string>
    <string name="contentDesc_rss">An icon signifying the RSS standard</string>
    <string name="contentDesc_arrow">Right arrow</string>
    
	<!-- Preferences View -->
    <string name="remove_cache_dialog">Are you sure you want to remove all feed items?</string>
    <string name="item_clear">Clear cache</string>
    <string name="item_clear_description">Remove all collected feed items</string>
    <string name="item_clear_toast">Cache cleared</string>
    <string name="item_about">About</string>
    <string name="item_about_description">Details about version and author</string>
    <string name="item_about_content">Aaron Acerboni  \n
        University of Birghton  \n
        Version 0.1  \n
        Icons by P.J. Onori  \n
    </string>
    
	<!-- Add Publisher View -->
    <string name="set_publisher_url_label">Publisher URL</string>
    <string name="set_publisher_url_hint">example.com/rss</string>
    <string name="info_publisher_url_label">The URL which points to the publishers feed</string>
    <string name="set_publisher_name_label">Publisher Name</string>
    <string name="set_publisher_name_hint">Example News</string>
    <string name="info_publisher_name_label">A name you wish to identify the publisher by</string>
    <string name="set_publisher_button">Add publisher</string>
    
    <!-- Edit Publisher View -->
    <string name="remove_publisher_warning">Removing a publisher will remove all associated feeds.</string>
    <string name="no_publishers_found_label">No publishers are added.</string>
    <string name="no_checked_publishers_toast">You didn\'t check any publishers.</string>
    <string name="removed_publishers_toast">Removed.</string>    
    <string name="remove_publishers_dialog">Are you sure you want to remove checked publishers?</string>    
	
	<!-- Feeds View -->
	<string name="go_up">../</string>
    
	<!-- Article View -->
	<string name="no_feed_items">Touch Menu → Refresh to get some entries</string>
		<!-- item view item -->
		
		<!-- seeall view item -->
		<string name="seemore_label">See more from </string>
    
</resources>
